# sojka-validator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/sojka_validator/: __init__.py  __main__.py  benchmark.py  data_loader.py  example.py  inference.py  metrics.py  threshold.py
