[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sojka_validator"
dynamic = ["version"]
description = "Sojka validator project"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache 2.0"}
authors = [
    {name = "Pawel"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "transformers>=4.30",
    "torch>=2.0",
    "pandas>=2.0",
    "openpyxl>=3.0",
    "scikit-learn>=1.0",
    "python-dotenv>=1.0",
]

[tool.setuptools]
packages = ["sojka_validator"]

[tool.setuptools.package-dir]
sojka_validator = "src/sojka_validator"

[tool.setuptools.dynamic]
version = {attr = "sojka_validator.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pytest-cov>=4.0",
    "pre-commit>=3.0",
]
